--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,9 +9,9 @@
     <string name="title_activity_add_beer">AddBeerActivity</string>
     <string name="btn_ok_text">OK</string>
     <string name="btn_cancel_text">Cancel</string>
-    <string name="hint_description">Description</string>
-    <string name="hint_beer_name">Beer name</string>
-    <string name="hint_pub_name">Pub Name</string>
+    <string name="hint_description">description</string>
+    <string name="hint_beer_name">beer name</string>
+    <string name="hint_pub_name">where am I?</string>
     <string name="title_activity_beer_list">BeerListActivity</string>
     <string name="hello_world">Hello world!</string>
     <string name="add_another">Add Another</string>
